--- a/Company/Views/Project/Index.cshtml
+++ b/Company/Views/Project/Index.cshtml
@@ -1,11 +1,9 @@
 ﻿@*
     For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
 *@
-@{
-    Layout = "_EmployeeOneLayout";
-}
 
-<h1>Projects</h1>
+
+<h1 class="display-5">Projects</h1>
 <a href="/WorksFor/Index">Projects Working Details</a>
 <table class="table table-dark table-sm table-hover">
     <thead>
