--- a/Company/Views/Department/Details.cshtml
+++ b/Company/Views/Department/Details.cshtml
@@ -10,7 +10,7 @@
 }
 @model Department
 
-<h1>Update Department</h1>
+<h1 class="display-5">Update Department</h1>
 <form asp-action="update" asp-controller="department" class="form-dark">
     <input asp-for="Dnum" hidden/>
     <div class="mb-3">
