--- a/Company/Views/Department/Index.cshtml
+++ b/Company/Views/Department/Index.cshtml
@@ -4,7 +4,7 @@
 @{
     Layout = "_EmployeeOneLayout";
 }
-
+<h1 class="display-5">Departments Data</h1>
 <table class="table table-dark table-sm table-hover">
     <thead>
         <tr>
