--- a/Company/Views/WorksFor/Index.cshtml
+++ b/Company/Views/WorksFor/Index.cshtml
@@ -2,11 +2,10 @@
     For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
 *@
 @{
-    Layout = "_EmployeeOneLayout";
 
 }
 
-<h1>Project Working Details</h1>
+<h1 class="display-5">Project Working Details</h1>
 <table class="table table-dark table-sm table-hover">
     <thead>
         <tr>
@@ -23,12 +22,19 @@
         {
             <tr>
                 <th scope="row">@(++i)</th>
+
                 <td class="text-center my-3"><a href="/WorksFor/EmpProjDetails/@item.employee.SSN">@item.employee.FirstName @item.employee.LastName</a></td>
+                
                 <td>
                     <ul class="list-group list-group-flush">
                         @foreach(var project in item.projects)
                         {
-                            <li class="list-group-item bg-dark text-bg-dark"><a href="/WorksFor/ProjectDetails/@project.project.Pnum">@project.project.PName | <span style="color: @project.color">@project.Hours</span> hours.</a></li>
+                            <li class="list-group-item bg-dark text-bg-dark">
+                            <a href="/WorksFor/ProjectDetails/@project.project.Pnum">
+                                @project.project.PName | <span style="color: @project.color">@project.Hours</span> hours.
+                            </a>
+                            </li>
+                            
                         }
 
                     </ul>
@@ -39,3 +45,4 @@
 
     </tbody>
 </table>
+<a class="btn btn-dark btn-xl" href="/WorksFor/ProjectHoursDetails">Show Projects Hours details</a>
